gemeni update and pswd

--- a/index.html
+++ b/index.html
@@ -1,150 +1,11 @@
 <!doctype html>
-<html log="en">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>UTS Rocketry — University of Toronto Schools</title>
 <meta name="description" content="UTS Rocketry is a team of innovators and engineers designing, building, and launching rockets at University of Toronto Schools.">
-<style>
-:root { --blue-600:#0a6cff; --blue-500:#1d7fff; --blue-300:#69bbff;
-        --ink-900:#0e1824; --ink-700:#37475e; --ink-500:#6a7b94;
-        --bg:#ffffff; --bg-elev:#f6f8fb; --radius:16px; }
-@media (prefers-color-scheme: dark){
-  :root{ --bg:#0b1119; --bg-elev:#0f1827; --ink-900:#e9f1ff; --ink-700:#c2d6fb; --ink-500:#9bb2db; }
-}
-*{box-sizing:border-box}
-body{margin:0;background:var(--bg);color:var(--ink-900);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-body.has-topbar{padding-top:90px}
-a{color:var(--blue-500);text-decoration:none}
-a:hover{text-decoration:underline}
-.container{max-width:1100px;margin:auto;padding:0 18px}
-.hero{padding:56px 0 22px;background:radial-gradient(1200px 400px at 0% 0%, color-mix(in oklab,var(--blue-600) 14%, transparent), transparent) no-repeat;}
-.hero-wrap{display:grid;grid-template-columns:1.15fr .85fr;gap:28px;align-items:center}
-.brand{display:flex;align-items:center;gap:14px;margin-bottom:10px}
-.brand img{height:58px}
-h1{font-size:clamp(34px,5vw,56px);line-height:1.12;margin:0 0 12px;font-weight:900}
-.lead{font-size:1.1rem;color:var(--ink-700)}
-.btn{display:inline-block;padding:13px 18px;border-radius:12px;font-weight:800;border:1px solid transparent;transition:transform .2s ease, box-shadow .2s ease}
-.btn.primary{background:var(--blue-600);color:#fff;box-shadow:0 10px 26px -12px var(--blue-600)}
-.btn.primary:hover{transform:translateY(-2px);box-shadow:0 16px 34px -16px var(--blue-600)}
-.btn.ghost{border-color:color-mix(in oklab,var(--ink-500) 40%, transparent);color:var(--ink-900);background:var(--bg)}
-.cta{display:flex;gap:12px;flex-wrap:wrap;margin-top:10px}
-.card{background:var(--bg-elev);border:1px solid color-mix(in oklab,var(--ink-500) 18%, transparent);border-radius:var(--radius);padding:20px}
-section{padding:42px 0}
-h2{font-size:clamp(24px,3vw,36px);margin:0 0 8px;font-weight:900}
-.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
-.grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:18px}
-@media (max-width:900px){ .hero-wrap, .grid-3, .grid-2 {grid-template-columns:1fr} }
-ul.clean{list-style:none;padding:0;margin:0}
-ul.clean li{margin:10px 0;padding-left:26px;position:relative}
-ul.clean li:before{content:"✦";position:absolute;left:0;top:0;color:var(--blue-500)}
-footer{padding:28px 0;border-top:1px solid color-mix(in oklab,var(--ink-500) 20%, transparent);font-size:.95rem;color:var(--ink-500)}
-@keyframes float { 0%{transform:translateY(0)} 50%{transform:translateY(-6px)} 100%{transform:translateY(0)} }
-@keyframes fadeUp { from{opacity:0; transform:translateY(14px)} to{opacity:1; transform:none} }
-.logo-float{animation:float 5s ease-in-out infinite}
-.reveal{opacity:0; transform:translateY(12px)}
-.reveal.is-in{animation:fadeUp .6s ease forwards}
-@media (prefers-reduced-motion: reduce){
-  .logo-float, .reveal.is-in{animation:none !important;opacity:1;transform:none}
-  .btn.primary:hover{transform:none}
-}
-
-.team-photo {
-  width: 100%;
-  max-width: 520px;
-  border-radius: 18px;
-  box-shadow: 0 8px 32px -12px var(--blue-600);
-  margin-bottom: 22px;
-  object-fit: cover;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* Subteam layout */
-.subteam-grid{display:grid;grid-template-columns:1fr 1fr;gap:20px;align-items:start}
-@media (max-width:900px){ .subteam-grid{grid-template-columns:1fr} }
-.drive-btn{display:inline-block;background:var(--blue-500);color:#fff;padding:10px 14px;border-radius:10px;font-weight:800;text-decoration:none;transition:transform .18s cubic-bezier(.4,1.4,.6,1.0), box-shadow .18s}
-.drive-btn:hover{transform:scale(1.08);box-shadow:0 12px 28px -16px var(--blue-600)}
-.subteam-detail-card{margin-top:18px}
-.subteam-detail-head{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-.subteam-detail-actions{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-.subteam-content{margin-top:16px;color:var(--ink-700)}
-.subteam-content p{margin-top:0}
-.mission-section{padding:26px 0 10px}
-.mission-card{display:flex;gap:24px;align-items:center;flex-wrap:wrap}
-.mission-card img{max-width:160px;width:100%;height:auto}
-.mission-text{flex:1;min-width:260px}
-.mission-text h2{margin:0 0 8px;font-weight:900}
-.mission-text p{margin:0 0 8px}
-.mission-info-card{display:flex;gap:24px;align-items:center;flex-wrap:wrap}
-.mission-info-card img{max-width:220px;width:100%;height:auto;border-radius:18px;box-shadow:0 12px 30px -12px rgba(10,108,255,.55);background:radial-gradient(circle at 30% 30%,rgba(255,255,255,.6),transparent)}
-.mission-summary{flex:1;min-width:260px}
-.mission-summary-header{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;margin-bottom:8px}
-.mission-summary h2{margin:0;font-size:clamp(24px,3vw,36px)}
-.mission-summary p{margin:0 0 10px}
-.mission-summary-body{display:flex;gap:18px;flex-wrap:wrap;align-items:flex-start}
-.mission-summary-text{flex:1;min-width:220px}
-.mission-timeline{flex:1;min-width:240px;margin-top:0}
-.mission-timeline img{width:100%;max-width:520px;border-radius:12px;box-shadow:0 8px 24px -12px rgba(10,108,255,.45)}
-.subteam-content-grid{display:flex;gap:20px;flex-wrap:wrap;align-items:flex-start;margin-top:16px}
-.subteam-detail-photo{max-width:320px;width:100%;border-radius:14px;box-shadow:0 12px 30px -18px rgba(10,108,255,.5);display:none}
-/* Floating action button (bottom-right) */
-/* Main action button animation */
-.fab {
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  background: var(--blue-600);
-  color: #fff;
-  border: none;
-  border-radius: 999px;
-  padding: 14px 18px;
-  font-weight: 800;
-  box-shadow: 0 12px 28px -14px var(--blue-600);
-  cursor: pointer;
-  z-index: 9999;
-  transition: transform 0.18s cubic-bezier(.4,1.4,.6,1.0), filter 0.18s;
-}
-.fab:hover {
-  filter: brightness(1.05);
-  transform: scale(1.12);
-}
-
-.btn, .calendar-btn {
-  transition: transform 0.18s cubic-bezier(.4,1.4,.6,1.0), box-shadow 0.18s;
-}
-.btn:hover {
-  transform: scale(1.08);
-  box-shadow: 0 16px 34px -16px var(--blue-600);
-}
-.calendar-btn {
-  display: inline-block;
-  background: var(--blue-600);
-  color: #fff;
-  border: none;
-  border-radius: 12px;
-  padding: 8px 16px;
-  font-weight: 700;
-  font-size: 0.98em;
-  margin-top: 0.5em;
-  box-shadow: 0 6px 18px -8px var(--blue-600);
-  cursor: pointer;
-  text-decoration: none;
-  transition: transform 0.18s cubic-bezier(.4,1.4,.6,1.0), box-shadow 0.18s;
-}
-.calendar-btn:hover {
-  transform: scale(1.09);
-  box-shadow: 0 12px 28px -14px var(--blue-600);
-}
-
-/* Members topbar (floating rounded nav visible only in members area) */
-.members-topbar{position:fixed;top:14px;left:50%;transform:translateX(-50%);background:var(--bg-elev);padding:8px;border-radius:999px;box-shadow:0 12px 36px -18px rgba(10,108,255,0.28);z-index:99998;display:none}
-.members-topbar-inner{display:flex;gap:8px;align-items:center}
-.members-topbar .topbar-item{background:transparent;border:none;padding:8px 12px;border-radius:999px;cursor:pointer;font-weight:800;color:var(--ink-900);transition:transform .18s cubic-bezier(.4,1.4,.6,1.0), box-shadow .18s}
-.members-topbar .topbar-item:hover{transform:scale(1.08);box-shadow:0 12px 26px -16px var(--blue-600)}
-.members-topbar .topbar-item.active{background:var(--blue-600);color:#fff;transform:scale(1.04)}
-@media (max-width:640px){.members-topbar{left:8px;right:8px;transform:none;width:auto;padding:6px 8px}.members-topbar-inner{overflow:auto;white-space:nowrap}body.has-topbar{padding-top:120px}}
-</style>
+<link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 <!-- Members topbar (only visible inside members portal and subteam pages) -->
@@ -396,282 +257,7 @@ footer{padding:28px 0;border-top:1px solid color-mix(in oklab,var(--ink-500) 20%
   </div>
 </div>
 
-<script>
-for (const a of document.querySelectorAll('a[href^="#"]')){
-  a.addEventListener('click', e => {
-    const id=a.getAttribute('href').slice(1);
-    const el=document.getElementById(id);
-    if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth', block:'start'}); }
-  })
-}
-const io = new IntersectionObserver((entries)=>{entries.forEach(en=>{ if(en.isIntersecting) en.target.classList.add('is-in'); })}, {threshold:.2});
-document.querySelectorAll('.reveal').forEach(el=> io.observe(el));
-
-const memberOverviewIds = ['members-hero','members-mission-info','members-announcements-section','members-calendar-section','members-contact-section'];
-const subteamDetailSection = document.getElementById('members-subteam-detail');
-const subteamDetailTitle = document.getElementById('subteam-detail-title');
-const subteamDetailContent = document.getElementById('subteam-detail-content');
-const subteamDetailDrive = document.getElementById('subteam-detail-drive');
-const subteamDetailImage = document.getElementById('subteam-detail-image');
-const missionHighlightSection = document.getElementById('mission-highlight');
-const missionSummaryEl = document.getElementById('members-mission-summary');
-
-const subteamMeta = {
-  airframe: { title: 'Airframe & Structure', file: 'subteams/airframe.txt', drive: 'https://drive.google.com/drive/folders/1zbsAUug3qgkl2ZO4NNdr3jSOXOj2PUOx?usp=sharing', image: 'assets/Ascension%20Structure.png' },
-  propulsion: { title: 'Propulsion', file: 'subteams/propulsion.txt', drive: 'https://drive.google.com/drive/folders/1mVWVRmwIK9wUXQAkmsFCMyw_RuaJeSSD?usp=sharing', image: 'assets/Ascension%20Propulsion.png' },
-  recovery: { title: 'Recovery', file: 'subteams/recovery.txt', drive: 'https://drive.google.com/drive/folders/1qNLYnXMIF5mPo5r_mWvnrqy5Bd_J5_s_?usp=sharing', image: 'assets/Ascension%20Recovery.png' },
-  payload: { title: 'Payload', file: 'subteams/payload.txt', drive: 'https://drive.google.com/drive/folders/1_4oAQ3Cpfb2av9ywwG58SUxS1xPAfx5l?usp=sharing', image: 'assets/Ascension%20Payload.png' },
-  avionics: { title: 'Avionics & Electronics', file: 'subteams/avionics.txt', drive: 'https://drive.google.com/drive/folders/1aFLbDr6QvdL4zBIiKESB8ivaBqPUNW3D?usp=sharing', image: 'assets/Ascension%20Avionics.png' }
-};
-
-function toggleMembersOverview(show){
-  memberOverviewIds.forEach(id=>{
-    const el = document.getElementById(id);
-    if (el) el.style.display = show ? '' : 'none';
-  });
-}
-
-// Show/hide main and members portal sections
-function showMainPage() {
-  document.getElementById('main-hero').style.display = '';
-  document.getElementById('project').style.display = '';
-  document.getElementById('skills').style.display = '';
-  document.getElementById('announcements-calendar').style.display = '';
-  document.getElementById('contact').style.display = '';
-  if (missionHighlightSection) missionHighlightSection.style.display = '';
-  toggleMembersOverview(false);
-  if (subteamDetailSection) subteamDetailSection.style.display = 'none';
-  document.getElementById('members-btn').style.display = '';
-  document.getElementById('back-btn').style.display = 'none';
-  hideTopbar();
-}
-function showMembersPortal() {
-  document.getElementById('main-hero').style.display = 'none';
-  document.getElementById('project').style.display = 'none';
-  document.getElementById('skills').style.display = 'none';
-  document.getElementById('announcements-calendar').style.display = 'none';
-  document.getElementById('contact').style.display = 'none';
-  if (missionHighlightSection) missionHighlightSection.style.display = 'none';
-  toggleMembersOverview(true);
-  if (subteamDetailSection) subteamDetailSection.style.display = 'none';
-  document.getElementById('members-btn').style.display = 'none';
-  document.getElementById('back-btn').style.display = '';
-  showTopbar('members');
-}
-
-// Password gating for members portal (custom modal, works in Google Sites embeds)
-let membersAuthenticated = false;
-const PASS = 'BlastOFF';
-const modal = document.getElementById('password-modal');
-const input = document.getElementById('password-input');
-const submit = document.getElementById('password-submit');
-const errorMsg = document.getElementById('password-error');
-
-function openPasswordModal() {
-  modal.style.display = 'flex';
-  input.value = '';
-  errorMsg.style.display = 'none';
-  setTimeout(() => { input.focus(); }, 100);
-}
-function closePasswordModal() {
-  modal.style.display = 'none';
-}
-
-document.getElementById('members-btn').addEventListener('click', () => {
-  if (membersAuthenticated) {
-    showMembersPortal();
-    return;
-  }
-  openPasswordModal();
-});
-
-submit.addEventListener('click', () => {
-  if (input.value === PASS) {
-    membersAuthenticated = true;
-    closePasswordModal();
-    showMembersPortal();
-  } else {
-    errorMsg.style.display = 'block';
-    input.value = '';
-    input.focus();
-  }
-});
-input.addEventListener('keydown', e => {
-  if (e.key === 'Enter') submit.click();
-});
-modal.addEventListener('click', e => {
-  if (e.target === modal) closePasswordModal();
-});
-document.getElementById('back-btn').addEventListener('click', () => {
-  showMainPage();
-});
-
-
-// Helper: convert URLs in text to clickable links
-function linkify(text) {
-  // Simpler regex: match any http(s) URL
-  const urlRegex = /(https?:\/\/[^\s]+)/g;
-  return text.replace(urlRegex, url => `<a href="${url}" target="_blank" rel="noopener">${url}</a>`);
-}
-
-// Load public announcements for main page
-fetch('announcments.txt')
-  .then(r => r.ok ? r.text() : Promise.reject(new Error('Announcements not found')))
-  .then(text => {
-    const list = document.getElementById('announcements-list');
-    const publicLines = text
-      .split('\n')
-      .map(l => l.trim())
-      .filter(Boolean)
-      .filter(l => !(l.startsWith('`') && l.endsWith('`')));
-    list.innerHTML = publicLines.length
-      ? publicLines.map(line => `<li>${linkify(line)}</li>`).join('')
-      : '<li>No announcements</li>';
-  })
-  .catch(() => {
-    const list = document.getElementById('announcements-list');
-    if (list) list.innerHTML = '<li>No announcements right now</li>';
-  });
-
-// Load both public and member-only announcements for members portal
-fetch('announcments.txt')
-  .then(r => r.ok ? r.text() : Promise.reject(new Error('Announcements not found')))
-  .then(text => {
-    const list = document.getElementById('members-announcements');
-    const lines = text.split('\n').map(l => l.trim()).filter(Boolean);
-    const normalized = lines.map(l => {
-      // If wrapped with backticks, treat as members-only and strip the backticks
-      if (l.startsWith('`') && l.endsWith('`')) return l.slice(1, -1);
-      return l;
-    });
-    list.innerHTML = normalized.length ? normalized.map(l => `<li>${linkify(l)}</li>`).join('') : '<li>No announcements right now</li>';
-  })
-  .catch(() => {
-    const list = document.getElementById('members-announcements');
-    if (list) list.innerHTML = '<li>No announcements</li>';
-  });
-
-// Load mission description from external text file
-fetch('mission.txt')
-  .then(r => r.ok ? r.text() : Promise.reject(new Error('Mission text not found')))
-  .then(text => {
-    const target = document.getElementById('mission-description');
-    const safe = escapeHTML(text.trim()).replace(/\n\n+/g,'</p><p>').replace(/\n/g,'<br>');
-    if (target) target.innerHTML = '<p>' + linkify(safe) + '</p>';
-    if (missionSummaryEl) missionSummaryEl.innerHTML = '<p>' + linkify(safe) + '</p>';
-  })
-  .catch(() => {
-    const target = document.getElementById('mission-description');
-    if (target) target.textContent = 'Mission details coming soon.';
-    if (missionSummaryEl) missionSummaryEl.innerHTML = '<p>Summary of mission and goals.</p>';
-  });
-
-function showSubteamDetail(id){
-  if (!subteamDetailSection || !subteamDetailContent || !subteamDetailTitle) return;
-  const meta = subteamMeta[id];
-  if (!meta) return;
-  document.getElementById('main-hero').style.display = 'none';
-  document.getElementById('project').style.display = 'none';
-  document.getElementById('skills').style.display = 'none';
-  document.getElementById('announcements-calendar').style.display = 'none';
-  document.getElementById('contact').style.display = 'none';
-  toggleMembersOverview(false);
-  subteamDetailSection.style.display = '';
-  subteamDetailTitle.textContent = meta.title;
-  if (subteamDetailDrive){
-    if (meta.drive){
-      subteamDetailDrive.href = meta.drive;
-      subteamDetailDrive.textContent = `${meta.title || 'Subteam'} Folder`;
-      subteamDetailDrive.style.display = '';
-    } else {
-      subteamDetailDrive.style.display = 'none';
-    }
-  }
-  if (subteamDetailImage){
-    if (meta.image){
-      subteamDetailImage.src = meta.image;
-      subteamDetailImage.alt = meta.title + ' visual';
-      subteamDetailImage.style.display = 'block';
-    } else {
-      subteamDetailImage.style.display = 'none';
-    }
-  }
-  subteamDetailContent.innerHTML = '<p>Loading details...</p>';
-  loadSubteamDetails(meta.file);
-  showTopbar(id);
-}
-
-function loadSubteamDetails(path){
-  if (!path || !subteamDetailContent) return;
-  fetch(path).then(r=> r.ok ? r.text() : Promise.reject(new Error('not found')))
-    .then(text => {
-      const safe = escapeHTML(text).replace(/\n\n+/g,'</p><p>').replace(/\n/g,'<br>');
-      subteamDetailContent.innerHTML = '<p>' + linkify(safe) + '</p>';
-    }).catch(()=>{
-      subteamDetailContent.innerHTML = '<p>No details yet.</p>';
-    });
-}
-
-/* Topbar helpers */
-const topbar = document.getElementById('members-topbar');
-let activeTopbarTarget = 'members';
-function showTopbar(active){
-  if (!topbar) return;
-  activeTopbarTarget = active;
-  topbar.style.display = 'flex';
-  document.body.classList.add('has-topbar');
-  topbar.querySelectorAll('.topbar-item').forEach(b=> b.classList.toggle('active', b.dataset.target===active));
-}
-function hideTopbar(){
-  if (!topbar) return;
-  topbar.style.display = 'none';
-  document.body.classList.remove('has-topbar');
-}
-
-// topbar button handlers
-document.querySelectorAll('#members-topbar .topbar-item').forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    const t = btn.dataset.target;
-    if (t === 'members'){
-      showMembersPortal();
-    } else {
-      showSubteamDetail(t);
-    }
-  });
-});
-
-// Robust visibility check: if any members-area section is visible, ensure topbar is shown.
-function isAnyMembersSectionVisible(){
-  const ids = memberOverviewIds.concat(['members-subteam-detail']);
-  for (const id of ids){
-    const el = document.getElementById(id);
-    if (!el) continue;
-    const style = window.getComputedStyle(el);
-    if (style && style.display !== 'none' && style.visibility !== 'hidden' && el.offsetParent !== null) return true;
-  }
-  return false;
-}
-
-function updateTopbarVisibility(){
-  try{
-    if (isAnyMembersSectionVisible()){
-      showTopbar(activeTopbarTarget);
-    } else {
-      hideTopbar();
-    }
-  }catch(e){
-    // ignore
-  }
-}
-
-// periodic fallback in case something prevents immediate show/hide (works in embeds)
-setInterval(updateTopbarVisibility, 600);
-
-// helper to escape HTML for safety
-function escapeHTML(s){
-  return (s||'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;').replace(/'/g,'&#39;');
-}
-
-</script>
+<script src="assets/js/config.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
